# yarg-lang

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE_NOTICES  README.md  build.sh  builtin.c  builtin.h  channel.c  channel.h  chunk.c  chunk.h  clean.sh  common.h  compiler.c  debug.c  debug.h  main.c  memory.c  memory.h  native.c  native.h  object.c  object.h  project.pbxproj  routine.c  routine.h  scanner.c  scanner.h  svm.c  table.c  test.sh  threadstack.c  threadstack.h  toy.lox  value.c  value.h  vm.c  (+1 more)
.github/workflows/: build-macos.yml
cproto/: CMakeLists.txt  CMakePresets.json  LICENSE_NOTICES  README.md  builtin.c  builtin.h  channel.h  chunk.c  chunk.h  compiler.c  debug.c  files.c  files_stdlib.c  main.c  memory.c  native.c  native.h  object.c  platform_hal.c  platform_hal.h  routine.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
cproto/specimen/: alarm.lox  coroutine-flash.lox  fibonacci.py  timed-flash.lox
cyarg/: CMakeLists.txt  CMakePresets.json  README.md  ast.c  ast.h  ast_compiler.c  ast_compiler.h  builtin.c  builtin.h  channel.c  channel.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  compiler_common.h  debug.c  debug.h  files.h  files_littlefs.c  hosted.c  hosted.h  main.c  memmap_custom.ld  memory.c  memory.h  native.c  native.h  object.c  object.h  pack.c  pack.h  parser.c  parser.h  parser_compiler.c  pico_flash_fs.h  pico_lfs_hal.c  pico_lfs_hal.h  platform_hal.c  (+21 more)
cyarg/big-int/: big-int.c  big-int.h  (+4 more)
docs/: release_README  yarg_test.md
hostproto/: LICENSE  README.md  bdfs_lfs_hal.c  bdfs_lfs_hal.go  bdfs_lfs_hal_cb.go  bdfs_lfs_hal_cb_cgo.go  block_device.go  block_device_uf2.go  go.mod  hostproto.go  littlefs.go  pico_flash_device.go  test.txt  testrunner.go
hostyarg/: README.md  bdfs_lfs.go  bdfs_lfs_hal_cb.go  block_device.go  go.mod  hostyarg.go
specimen/: coroutine-flash.lox  coroutine.lox  fibonacci.lox  flash.lox  multicore-flash.lox  multicore.lox  script-one-liners.txt  timed-flash.lox
test/: cyarg-run.sh  test-benchmark.sh
test/value/: CMakeLists.txt  CMakePresets.json  generic_size.c  generic_size.h  value_main  value_main.c  value_nan.c  value_nan.h  value_union.c  value_union.h
tools/: build-conway.sh  build-release.sh  build-specimen.sh  build-test-hardware.sh  pico-reset  setup-ubuntu-vm.sh  setup-ubuntu.sh
vscode-yarg/: LICENSE  package.json
(+85 files in other folders)
